app/assets/stylesheets/custom.css.scss
.wallpaper {
	height: 100vh;
	background: url("SimoneAnne-6292.jpg") no-repeat;
	background-size: cover;
}

.container {
	width: 90%;
	max-width: 960px;
	margin: 0 auto;
	height: 100%;
}

.form {
	padding: 10px;
	position: relative;
	top: 50px;
	width: 400px;
	margin: 0 auto;
	box-shadow: 0px 0px 4px black;
	border-radius: 2px;
	background: transparentize(white, .3);
}

.email, .password {
	label {
		position: absolute;
		margin-left: 50px;
		width: 80px;
		text-align: right;
	}
}

.header {
	background: none;
}

.login {
	margin: 10px;
	width: 200px;
	margin-left: 150px;
}

.remember {
	position: relative;
	left: 200px;
}

.sign_in {
		margin-left: 200px;
		width: 100px;
}

.links {
	position: absolute;
	top: 80%;
	font-size: 10pt;
}

i {
	margin: 0 auto;
	margin-top: 10px;
	color: darkblue;
	width: 100%;
	font-size: 50pt;
	text-align: center;
}

.footer {
	position: absolute;
	top: 90vh;
	width: 100%;
	margin-top: 20px;
	border-top: 2px solid transparentize(gray, .3);
	border-bottom: 2px solid transparentize(gray, .3);
	padding: 5px;
	padding-top: 10px;
	background: transparentize(gray, .6);
	height: 10vh;
	font-size: 10pt;
	text-align: center;
}

